# aparte

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.impeccable/: design.json
.impeccable/critique/: 2026-07-23T02-28-52Z__src-aparte-assets-index-html.md
docs/: plan-dictee-vide.md  plan-portage-macos-m0.md  plan-portage-macos-m3.md  plan-portage-macos-m4-durcissement.md  plan-portage-macos-m4.md  plan-portage-macos.md
docs/archives/confront-codex-dictee-vide-2026-07-23-1139/: round-1-claude.md  round-1-codex.md  round-2-claude.md  round-2-codex.md  round-3-claude-confirm.md  round-3-claude.md  round-3-codex.md
docs/archives/confront-codex-portage-macos-2026-07-23-1627/: round-1-claude.md  round-1-codex.md  round-2-claude.md  round-2-codex.md  round-3-claude.md  round-3-codex.md  round-4-claude-confirm.md  round-4-claude.md  round-4-codex.md
docs/archives/confront-codex-portage-macos-m0-2026-07-23-1725/: round-1-claude.md  round-1-codex.md  round-2-claude-confirm.md  round-2-claude.md  round-2-codex.md
docs/archives/confront-codex-portage-macos-m3-2026-07-24-0940/: round-1-claude.md  round-1-codex.md  round-2-claude-confirm.md  round-2-claude.md  round-2-codex.md
docs/archives/confront-codex-portage-macos-m4-2026-07-24-1231/: round-1-claude.md  round-1-codex.md  round-2-claude-confirm.md  round-2-claude.md  round-2-codex.md
packaging/linux/: aparte.desktop  murmur.desktop  whispr-flow-linux.desktop
scripts/: install-linux.sh
src/aparte/: __init__.py  audio.py  cli.py  clipboard.py  config.py  desktop.py  diagnostics.py  hallucinations.py  history.py  hotkey.py  linux_desktop.py  macos_insert.py  macos_permissions.py  macos_recording.py  notify.py  numbers.py  platform_dispatch.py  polish.py  session.py  transcription.py  tray.py  update.py
src/aparte/assets/: app.css  app.js  i18n.js  index.html
src/murmur/: audio.py  cli.py  config.py  desktop.py  diagnostics.py  hotkey.py  linux_desktop.py  notify.py  polish.py  session.py  transcription.py
src/murmur/assets/: app.css  app.js  i18n.js  index.html
src/whispr_flow_linux/: audio.py  cli.py  clipboard.py  config.py  desktop.py  linux_desktop.py  notify.py  polish.py  session.py  transcription.py
tasks/: lessons.md  todo.md
tests/: test_audio.py  test_cli.py  test_clipboard.py  test_config.py  test_desktop.py  test_diagnostics.py  test_hallucinations.py  test_history.py  test_hotkey.py  test_linux_desktop.py  test_macos_insert.py  test_macos_permissions.py  test_macos_recording.py  test_notify.py  test_numbers.py  test_packaging.py  test_platform_dispatch.py  test_polish.py  test_session.py  test_transcription.py  test_tray.py  test_update.py
