[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "murmur"
version = "0.2.0"
description = "Local-first Linux dictation app with Whisper transcription and smart formatting."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Collectif Web" }]
keywords = ["dictation", "speech-to-text", "whisper", "linux", "voice", "transcription"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/collectifweb/murmur"
Repository = "https://github.com/collectifweb/murmur"
Issues = "https://github.com/collectifweb/murmur/issues"

[project.optional-dependencies]
whisper = [
  "faster-whisper>=1.0",
]
recording = [
  "sounddevice>=0.4",
  "soundfile>=0.12",
]
cuda = [
  "nvidia-cublas-cu12",
  "nvidia-cudnn-cu12>=9,<10",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
murmur = "murmur.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
murmur = ["assets/*"]

