[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aparte"
version = "1.1.1"
description = "Local-first Linux dictation app with Whisper transcription and smart formatting."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Collectif Web" }]
keywords = ["dictation", "speech-to-text", "whisper", "linux", "voice", "transcription"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/collectifweb/aparte"
Repository = "https://github.com/collectifweb/aparte"
Issues = "https://github.com/collectifweb/aparte/issues"

[project.optional-dependencies]
whisper = [
  # 1.0.2 est le plancher : `hotwords` (« Mes mots ») n'existe pas avant.
  "faster-whisper>=1.0.2",
]
recording = [
  "sounddevice>=0.4",
  "soundfile>=0.12",
]
cuda = [
  "nvidia-cublas-cu12",
  "nvidia-cudnn-cu12>=9,<10",
]
# macOS support is being built lot by lot (see docs/plan-portage-macos.md); these
# are packaging plumbing, not proof the integrations work yet. Every dependency
# is gated on `sys_platform == "darwin"` so the extra installs nothing off a Mac —
# even a stray `pip install .[macos]` on Linux or Windows is a no-op. Exact PyObjC
# frameworks only, never the `pyobjc` meta-package.
macos = [
  "pyobjc-framework-Quartz; sys_platform == 'darwin'",        # CGEvent — insertion (M3)
  "pyobjc-framework-Cocoa; sys_platform == 'darwin'",         # AppKit / run loop (M5)
  "pyobjc-framework-AVFoundation; sys_platform == 'darwin'",  # microphone permission (M2)
  "rumps; sys_platform == 'darwin'",                          # menu-bar tray (M6)
  "quickmachotkey; sys_platform == 'darwin'",                 # global-shortcut façade (M5)
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
aparte = "aparte.cli:main"
# Deprecated pre-rename alias, kept so a global shortcut still bound to the old
# binary keeps working after the update. Remove in a later release.
murmur = "aparte.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aparte = ["assets/*"]

